--- a/package.json
+++ b/package.json
@@ -4,11 +4,25 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.4"
+    "@types/koa": "^2.11.3",
+    "class-validator": "^0.11.1",
+    "express": "^4.15.4",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^8.0.8",
+    "mysql": "^2.18.1",
+    "ts-node": "^8.8.2",
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.24",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
